--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f1f1f1;
     margin: 0;
     padding: 0;
+    transition: background 0.2s linear;
   }
   
+body.dark{
+    background: #232c35;
+  }
+
+  .checkbox{
+    opacity: 0;
+    position: absolute;
+  }
+.bnt-dark-mode{
+  margin-top: 20px;
+}
+
+.label{
+  background: black;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 50px;
+  height: 26px;
+  justify-content: space-between;
+  position: relative;
+  transform: scale(1.2);
+}
+
+.label .ball{
+  background-color:white;
+  border-radius: 50px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball{
+    transform: translateX(24px);
+}
+
+.fa-moon{
+  color: #f1c40f;
+  margin-left: 4px;
+}
+
+.fa-sun{
+  color: #f39c12;
+  margin-right: 4px;
+}
+
   .container {
     max-width: 400px;
     margin: 0 auto;
@@ -18,8 +78,12 @@ body {
   }
   
   .my-custom-btn button{
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 40px;
     justify-content: center, space-around;
+    transform: scale(1.5);
   }
  
   .my-custom-div a{
@@ -32,7 +96,7 @@ body {
 
   .container h2 {
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     font-family: 'Open Sans', sans-serif;
   }
   
