--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
@@ -8,26 +8,26 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
-    margin: 0;
-    padding: 0;
-    transition: background 0.2s linear;
-  }
-  
-body.dark{
-    background: #232c35;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #f1f1f1;
+  margin: 0;
+  padding: 0;
+  transition: background 0.2s linear;
+}
 
-  .checkbox{
-    opacity: 0;
-    position: absolute;
-  }
-.bnt-dark-mode{
+body.dark {
+  background: #181d23;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+.bnt-dark-mode {
   margin-top: 20px;
 }
 
-.label{
+.label {
   background: black;
   border-radius: 50px;
   cursor: pointer;
@@ -41,8 +41,8 @@ body.dark{
   transform: scale(1.2);
 }
 
-.label .ball{
-  background-color:white;
+.label .ball {
+  background-color: white;
   border-radius: 50px;
   position: absolute;
   top: 2px;
@@ -53,95 +53,96 @@ body.dark{
   transition: transform 0.2s linear;
 }
 
-.checkbox:checked + .label .ball{
-    transform: translateX(24px);
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
 }
 
-.fa-moon{
+.fa-moon {
   color: #f1c40f;
   margin-left: 4px;
 }
 
-.fa-sun{
+.fa-sun {
   color: #f39c12;
   margin-right: 4px;
 }
 
+.container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #ffffff;
+  margin-top: 100px;
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.my-custom-btn button {
+  margin-top: 40px;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  justify-content: center, space-around;
+  transform: scale(1.5);
+}
+
+.my-custom-div a {
+  justify-content: center, space-around;
+  font-family: 'Open Sans', sans-serif;
+  color: black;
+  padding: 15px;
+  text-decoration: none;
+}
+
+.container h2 {
+  text-align: left;
+  margin-bottom: 25px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.container input[type='text'],
+.container input[type='password'] {
+  width: 100%;
+  padding: 12px;
+  padding-left: 22px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.input-user {
+  padding-left: 30px;
+  background-image: url('SVGs/person.svg');
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.input-senha {
+  padding-left: 30px;
+  background-image: url('SVGs/lock.svg');
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.container input[type='submit'] {
+  width: 100%;
+  background-color: #3f90b3;
+  color: #ffffff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  font-family: 'Open Sans', sans-serif 700;
+}
+
+.container input[type='submit']:hover {
+  background-color: #3b86a4;
+}
+
+@media screen and (max-width: 500px) {
   .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #ffffff;
-    margin-top: 100px;
-    border-radius: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 50px;
   }
-  
-  .my-custom-btn button{
-    margin-top: 40px;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-bottom: 40px;
-    justify-content: center, space-around;
-    transform: scale(1.5);
-  }
- 
-  .my-custom-div a{
-    justify-content: center, space-around;
-    font-family: 'Open Sans', sans-serif;
-    color: black;
-    padding: 15px;
-    text-decoration: none;
-  }
-
-  .container h2 {
-    text-align: left;
-    margin-bottom: 25px;
-    font-family: 'Open Sans', sans-serif;
-  }
-  
-  .container input[type="text"],
-  .container input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    padding-left: 22px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-    font-family: 'Open Sans', sans-serif;
-  }
-
-   .input-user{
-    padding-left: 30px;
-    background-image: url('SVGs/person.svg');
-    background-repeat: no-repeat;
-    background-position: left center;
-  }
-
-  .input-senha{
-    padding-left: 30px;
-    background-image: url('SVGs/lock.svg');
-    background-repeat: no-repeat;
-    background-position: left center;
-  }
-
-  .container input[type="submit"] {
-    width: 100%;
-    background-color: #3f90b3;
-    color: #ffffff;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    font-family: 'Open Sans', sans-serif 700;    
-  }
-
-  .container input[type="submit"]:hover {
-    background-color: #3b86a4;
-  }
-  
-  @media screen and (max-width: 500px) {
-    .container {
-      margin-top: 50px;
-    }
+}
