--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,72 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans:wght@400;700&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   border: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 :root{
   --bg-color: #f1f1f1;
   --conteiner-color: #dbdbdb;
   --font-color: black;
-  --font-family: 'Open Sans', sans-serif;
+  --footer-color: $gray-600;
+  --font-family-os: 'Open Sans', sans-serif;
+  --font-family-ms: Montserrat;
   --bnt-color: #3b86a4;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-      --bg-color: #181d23;
+      --bg-color: #060c0f;
       --conteiner-color: #1e242c;
       --font-color: #f1f1f1;
-      --bnt-color: #327189;
+      --bnt-color: #465B78;
+      --footer-color: $gray-900;
     }
 }
 
 body {
-  font-family: var(--font-family);
+  font-family: var(--font-family-os);
   background-color:var(--bg-color);
 }
-.h2-index-container{
-  text-align: left;
-  margin-bottom: 25px;
-  margin-left: 5%;
-  font-family: var(--font-family);
-  color: var(--font-color);
-}
 
-.pl-inicial-container a{
-  width: 45%;
-  text-decoration: none;
-}
-
-.pl-inicial-container button{
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  width: 45%;
-  padding: 8px;
-  padding-left: 35px;
-  border-radius: 15px;
-  margin-bottom: 10px;
-  margin-left: 5%;
-  font-family: var(--font-family);
-  background-color: var(--bnt-color);
-  color: #f1f1f1;
-}
-
-.container {
+.planilha{  
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
   background-color: var(--conteiner-color);
   margin-top: 100px;
   border-radius: 15px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+@media screen and (max-width: 500px) {
+  .planilha {
+    margin-top: 50px;
+  }
 }
 
-.my-custom-btn button {
+.link-planilhas{
+  text-align: left;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  font-family: var(--font-family-os);
+  color: var(--font-color);
+}
+
+.login {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: var(--conteiner-color);
+  margin-top: 100px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.icones button {
   margin-top: 40px;
   margin-right: 30px;
   margin-left: 30px;
@@ -76,23 +77,23 @@ body {
   transform: scale(1.5);
 }
 
-.my-custom-div a {
+.auxiliares-login a {
   justify-content: center, space-around;
-  font-family: var(--font-family);
+  font-family: var(--font-family-os);
   color: var(--font-color);
   padding: 15px;
   text-decoration: none;
 }
 
-.container h2 {
+.login h2 {
   text-align: left;
   margin-bottom: 25px;
-  font-family: var(--font-family);
+  font-family: var(--font-family-os);
   color: var(--font-color);
 }
 
-.container input[type='text'],
-.container input[type='password'] {
+.login input[type='text'],
+.login input[type='password'] {
   width: 100%;
   padding: 12px;
   padding-left: 22px;
@@ -100,10 +101,10 @@ body {
   border-radius: 15px;
   box-sizing: border-box;
   margin-bottom: 10px;
-  font-family: var(--font-family);
+  font-family: var(--font-family-os);
 }
 
-.container input[type='submit'] {
+.login input[type='submit'] {
   width: 100%;
   background-color: var(--bnt-color);
   color: #ffffff;
@@ -111,15 +112,54 @@ body {
   border: none;
   border-radius: 15px;
   cursor: pointer;
-  font-family: var(--font-family);
+  font-family: var(--font-family-os);
 }
 
-.container input[type='submit']:hover {
+.login input[type='submit']:hover {
   background-color: var(--bnt-color)
 }
 
 @media screen and (max-width: 500px) {
-  .container {
+  .login {
     margin-top: 50px;
   }
+}
+
+.conteudo{
+  text-align: center;
+  margin-top: 48px;
+  margin-bottom: 48px;
+  padding-bottom: 48px;
+  display: flex;
+  flex-direction: column;
+  color: var(--font-color);
+  font-family: var(--font-family-os);
+  font-size: large;
+  border-bottom: 0.4px solid #fff;
+}.conteudo h3{
+  font-family: var(--font-family-ms);
+  font-size: larger;
+  margin-bottom: 15px;
+}
+
+header{
+  display: flex;
+  justify-content: center;
+  margin-top: 48px;
+  margin-bottom: 48px;
+  text-align: center;
+  margin-left: 5%;
+  font-family: var(--font-family-ms);
+  color: var(--font-color);
+}
+
+footer{
+  background-color: var(--footer-color);
+  color: var(--font-color);
+  padding: 48px;
+}
+
+footer a {
+  text-decoration: none;
+  color: var(--font-color);
 }
