--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,8 +20,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-      --bg-color: #060c0f;
-      --conteiner-color: #1e242c;
+      --bg-color: #1e242c;
+      --conteiner-color: #2a3b42;
       --font-color: #f1f1f1;
       --bnt-color: #465B78;
       --footer-color: $gray-900;
@@ -135,26 +135,59 @@ body {
   color: var(--font-color);
   font-family: var(--font-family-os);
   font-size: large;
-  border-bottom: 0.4px solid #fff;
 }.conteudo h3{
   font-family: var(--font-family-ms);
   font-size: larger;
   margin-bottom: 15px;
 }
 
-header{
-  display: flex;
-  justify-content: center;
+.container {
   margin-top: 48px;
-  margin-bottom: 48px;
-  text-align: center;
-  margin-left: 5%;
+  width: 60%;
+  height: 120px;
+  background-color: #997332;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}.container:nth-child(2) {
+  background-color: #8d9923; /* Verde */
+
+}.container:nth-child(3) {
+  background-color: #336699; /* Azul */
+}.container:nth-child(4) {
+  background-color: #994742; /* Amarelo */
+}.container a {
+  text-decoration: none;
+  color: #f1f1f1;
   font-family: var(--font-family-ms);
-  color: var(--font-color);
+  font-size: 125%;
+}.container p {
+  padding-top: 15px;
+  font-family: var(--font-family-os);
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: var(--conteiner-color);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-family: var(--font-family-os);
+}.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  font-size: 24px;
+  line-height: 200px;
 }
 
 footer{
-  background-color: var(--footer-color);
+  margin-top: 20px;
+  background-color: var(--conteiner-color);
   color: var(--font-color);
   padding: 48px;
 }
